import 'package:audioplayers/audioplayers.dart';
import 'package:flutter/material.dart';

class Sounds extends StatefulWidget {
  const Sounds({Key? key}) : super(key: key);

  @override
  _SoundsState createState() => _SoundsState();
}

class _SoundsState extends State<Sounds> {
...
            child: GridView.count(
              mainAxisSpacing: 10,
              crossAxisCount: 2,
              primary: true,
              children: <Widget>[
                Card(
                  key: Key('Rain'),
                  elevation: 4,
                  // REFERENCE: https://api.flutter.dev/flutter/material/InkWell-class.html
                  child: InkWell(
                    onTap: () {
                      getAudio(
                          'https://cdn.staticcrate.com/stock-hd/audio/SOUNDSCRATE-RainyDay.mp3');
...
                        const Text('Rain')
                      ],
                    ),
                  ),
                ),
                Card(
                  key: Key('Waves'),
                  elevation: 4,
                  // REFERENCE: https://api.flutter.dev/flutter/material/InkWell-class.html
                  child: InkWell(
                    onTap: () {
                      getAudio(
                          'https://cdn.staticcrate.com/stock-hd/audio/soundscrate-loopable-waves-on-beach-windy-1.mp3');
...
                        const Text('Beach Waves')
                      ],
                    ),
                  ),
                ),
                Card(
                  key: Key('Subway'),
                  elevation: 4,
                  // REFERENCE: https://api.flutter.dev/flutter/material/InkWell-class.html
                  child: InkWell(
                    onTap: () {
                      getAudio(
                          'https://cdn.staticcrate.com/stock-hd/audio/soundscrate-public-subway-interior-1.mp3');
...
                        const Text('Subway')
                      ],
                    ),
                  ),
                ),
                Card(
                  key: Key('City'),
                  elevation: 4,
                  // REFERENCE: https://api.flutter.dev/flutter/material/InkWell-class.html
                  child: InkWell(
                    onTap: () {
                      getAudio(
                          'https://cdn.staticcrate.com/stock-hd/audio/soundscrate-city-ambience-4.mp3');
...
                        const Text('City')
                      ],
                    ),
                  ),
                ),
                Card(
                  key: Key('Fire'),
                  elevation: 4,
                  // REFERENCE: https://api.flutter.dev/flutter/material/InkWell-class.html
                  child: InkWell(
                    onTap: () {
                      getAudio(
                          'https://cdn.staticcrate.com/stock-hd/audio/soundscrate-fire.mp3');
...
                        const Text('Fire')
                      ],
                    ),
                  ),
                ),
                Card(
                  key: Key('Forest'),
                  elevation: 4,
                  // REFERENCE: https://api.flutter.dev/flutter/material/InkWell-class.html
                  child: InkWell(
                    onTap: () {
                      getAudio(
                          'https://cdn.staticcrate.com/stock-hd/audio/soundscrate-forest-ambient.mp3');
...
